fix switches to properly display state

--- a/app/styles/forms.css
+++ b/app/styles/forms.css
@@ -9,3 +9,11 @@
 .checkbox {
   @apply rounded border-gray-500 text-blue-600 shadow-sm focus:border-blue-300 focus:ring focus:ring-offset-0 focus:ring-blue-200 focus:ring-opacity-50;
 }
+
+.toggle-checkbox:checked ~ .toggle-switch {
+  @apply right-0 border-green-400;
+}
+
+.toggle-checkbox:checked ~ .toggle-label {
+  @apply bg-green-400;
+}
