--- a/app/components/files/type-audio.hbs
+++ b/app/components/files/type-audio.hbs
@@ -1,3 +1,3 @@
 <div class="w-full h-full flex items-center justify-center">
-  <audio src={{this.model.rawPath}} controls="controls"></audio>
+  <audio src={{@model.rawPath}} controls="controls"></audio>
 </div>
