--- a/app/styles/buttons.css
+++ b/app/styles/buttons.css
@@ -6,6 +6,10 @@
   @apply bg-blue-700;
 }
 
+button[disabled], button[disabled]:hover {
+  @apply bg-gray-500 cursor-not-allowed;
+}
+
 .button-danger {
   @apply bg-red-500 text-white font-bold py-2 px-4 rounded;
 }
